Changed text colors, added more sections, made all responsive flexbox grid

--- a/index.html
+++ b/index.html
@@ -20,19 +20,35 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        <section class="wrapper">
+      <section .flex-container>
+        <header>
+          <h1>Hi. I'm Katie.</h1>
+        </header>
+        <main>
+          <section class="intro">
+            <p>I am a <strong>Responsive Designer & Developer</strong> who thrives on visual storytelling. When I'm not working, pursuing side projects or reading, I can be found traveling, hiking and painting.
+            </p>
+          </section>
+        </main>
+          <section class="wrapper">
             <div class="div-1">
-                <p>I was born and raised in Greenville, SC but now reside in our nation's capitol, Washington, DC.</p>
+              <p>I was born and raised in Greenville, SC but now reside in our nation's capitol, Washington, DC.</p>
             </div>
             <div class="div-2">
-                <p>My passion is art. It is powerful and inspiring in every way.</p>
+              <p>My passion is art. It is powerful and inspiring in every way.</p>
             </div>
             <div class="div-3">
-                <p>A fun fact: I love traveling and would spend all of my time frolicking around the world if I could.</p>
+              <p>A fun fact: I love traveling and would spend all of my time frolicking around the world if I could.</p>
             </div>
-        </section>
-
+          </section>
+        <footer>
+          <section class="contact">
+            <a href="https://www.linkedin.com/in/katie-flack-art/"><img src="img/linkedin.png" alt="Linkedin"/></a>
+            <a href="https://github.com/krflack"><img src="img/github.png" alt="Github"/></a>
+            <a href="https://www.instagram.com/katieflackart/"><img src="img/instagram.png" alt="Instagram"/></a>
+          </section>
+        </footer>
+      </section>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
